# -*- Makefile -*-
#
# ----------------------------------------------------------------------
#
#                           Brad T. Aagaard
#                        U.S. Geological Survey
#
# <LicenseText>
#
# ----------------------------------------------------------------------
#

SUBDIRS = \
	bc \
	feassemble \
	materials \
	meshio \
	mpi \
	problems \
	topology \
	utils

#	faults

# End of file 
