# =================================================================================================
# This code is part of PyLith, developed through the Computational Infrastructure
# for Geodynamics (https://github.com/geodynamics/pylith).
#
# Copyright (c) 2010-2025, University of California, Davis and the PyLith Development Team.
# All rights reserved.
#
# See https://mit-license.org/ and LICENSE.md and for license information. 
# =================================================================================================


EXTRA_DIST = \
	announce_v1.0.1.txt \
	announce_v1.0.2.txt \
	announce_v1.1.0.txt \
	announce_v1.2.0.txt \
	announce_v1.3.0.txt \
	announce_v1.3.1.txt \
	announce_v1.4.0.txt \
	announce_v1.4.2.txt \
	announce_v1.5.0.txt \
	announce_v1.5.1.txt \
	announce_v1.5.2.txt \
	announce_v1.6.0.txt \
	announce_v1.6.1.txt \
	announce_v1.6.2.txt \
	announce_v1.6.3.txt \
	announce_v1.7.0.txt \
	announce_v1.7.1.txt \
	announce_v1.8.0.txt \
	announce_v1.9.0.txt \
	announce_v2.0.0.txt \
	announce_v2.0.1.txt \
	announce_v2.0.3.txt \
	announce_v2.1.0.txt \
	announce_v2.1.2.txt \
	announce_v2.1.3.txt \
	announce_v2.1.4.txt \
	announce_v2.2.0.txt \
	announce_v2.2.1.txt \
	announce_v3.0.0.md \
	announce_v3.0.1.md \
	announce_v3.0.2.md \
	announce_v3.0.3.md \
	announce_v4.0.0.md \
	announce_v4.1.0.md \
	announce_v4.1.1.md \
	announce_v4.1.2.md \
	announce_v4.1.3.md


# End of file 
