# =================================================================================================
# This code is part of PyLith, developed through the Computational Infrastructure
# for Geodynamics (https://github.com/geodynamics/pylith).
#
# Copyright (c) 2010-2023, University of California, Davis and the PyLith Development Team.
# All rights reserved.
#
# See https://mit-license.org/ and LICENSE.md and for license information. 
# =================================================================================================


EXTRA_DIST = \
	valgrind-python.supp \
	valgrind-openmpi.supp \
	generateetags.py \
	settings/debug_malloc.cfg \
	settings/attach_debugger.cfg \
	settings/solver_fault_additive.cfg \
	settings/solver_fault_exact.cfg \
	settings/solver_fault_fieldsplit.cfg \
	settings/solver_fault_schur.cfg \
	settings/solver_fault_schur_custompc.cfg \
	settings/solver_fault_schur_custompc_inexact.cfg \
	settings/solver_lu.cfg

# End of file 
