# =================================================================================================
# This code is part of PyLith, developed through the Computational Infrastructure
# for Geodynamics (https://github.com/geodynamics/pylith).
#
# Copyright (c) 2010-2025, University of California, Davis and the PyLith Development Team.
# All rights reserved.
#
# See https://mit-license.org/ and LICENSE.md and for license information. 
# =================================================================================================


EXTRA_DIST = \
	valgrind-python.supp \
	valgrind-openmpi.supp \
	settings/debug_malloc.cfg \
	settings/debugger_gnome.cfg \
	settings/petsc_monitor.cfg \
	settings/attach_debugger.cfg \
	settings/solver_fault_fieldsplit.cfg \
	settings/solver_fault_vpbjacobi.cfg \
	settings/solver_fieldsplit_poroelasticity.cfg \
	settings/solver_fieldsplit_poroelasticity_statevars.cfg \
	settings/solver_incompressible_elasticity.cfg \
	settings/solver_lu.cfg

# End of file 
