# =================================================================================================
# This code is part of PyLith, developed through the Computational Infrastructure
# for Geodynamics (https://github.com/geodynamics/pylith).
#
# Copyright (c) 2010-2025, University of California, Davis and the PyLith Development Team.
# All rights reserved.
#
# See https://mit-license.org/ and LICENSE.md and for license information. 
# =================================================================================================


EXTRA_DIST = \
	valgrind-python.supp \
	valgrind-openmpi.supp \
	settings/attach_debugger.cfg \
	settings/debugger_gnome.cfg \
	settings/petsc_collectiveio.cfg \
	settings/petsc_initial_guess.cfg \
	settings/petsc_monitoring.cfg \
	settings/petsc_solver_tolerances.cfg \
	settings/petsc_testing.cfg \
	settings/solver_elasticity.cfg \
	settings/solver_elasticity_fault_fieldsplit.cfg \
	settings/solver_elasticity_fault_vpbjacobi.cfg \
	settings/solver_elasticity_lu.cfg \
	settings/solver_incompressible_elasticity.cfg \
	settings/solver_poroelasticity.cfg \
	settings/solver_poroelasticity_fault.cfg \
	settings/solver_poroelasticity_statevars.cfg

# End of file 
