# -*- Makefile -*-
#
# ----------------------------------------------------------------------
#
#                           Brad T. Aagaard
#                        U.S. Geological Survey
#
# <LicenseText>
#
# ----------------------------------------------------------------------
#

EXTRA_DIST = \
	Makefile.am \
	README \
	materials/README \
	materials/configure.ac \
	materials/Makefile.am \
	materials/PlaneStrainState.hh \
	materials/PlaneStrainState.cc \
	materials/PlaneStrainState.i \
	materials/materialscontrib.i \
	materials/__init__.py \
	materials/PlaneStrainState.py \
	materials/tests/Makefile.am \
	materials/tests/testcontrib.py \
	materials/tests/TestPlaneStrainState.py \
	materials/m4/ac_pkg_swig.m4 \
	materials/m4/cit_numpy.m4 \
	materials/m4/cit_python.m4 \
	friction/README \
	friction/configure.ac \
	friction/Makefile.am \
	friction/ViscousFriction.hh \
	friction/ViscousFriction.cc \
	friction/ViscousFriction.i \
	friction/frictioncontrib.i \
	friction/__init__.py \
	friction/ViscousFriction.py \
	friction/tests/Makefile.am \
	friction/tests/testcontrib.py \
	friction/tests/TestViscousFriction.py \
	friction/m4/ac_pkg_swig.m4 \
	friction/m4/cit_numpy.m4 \
	friction/m4/cit_python.m4


# End of file 
