# -*- Makefile -*-
#
# ----------------------------------------------------------------------
#
#                           Brad T. Aagaard
#                        U.S. Geological Survey
#
# <LicenseText>
#
# ----------------------------------------------------------------------
#

EXTRA_DIST = \
	README \
	Cluster_CIT-garuda.txt \
	Cluster_CIT-garuda/PyLith.README \
	Cluster_CIT-garuda/sample.bashrc \
	Cluster_CIT-garuda/sample.bash.tools \
	Cluster_CIT-garuda/sample.pylithapp.cfg \
	Cluster_CIT-pangu.txt \
	Cluster_CIT-pangu/PyLith.README \
	Cluster_CIT-pangu/sample.bashrc \
	Cluster_CIT-pangu/sample.bash.tools \
	Cluster_CIT-pangu/sample.pylithapp.cfg \
	Cluster_Rocks-4.3-AMD64.txt \
	Cluster_Rocks-4.3-AMD64_bash.sh \
	Linux_ubuntu-AMD64_Aagaard.txt \
	Linux_ubuntu-AMD64_Aagaard.sh \
	Linux_Fedora8-AMD64_Aagaard.txt \
	Linux_Fedora8-AMD64_Aagaard_bash.sh \
	MacBookPro_Aagaard.txt \
	MacBookPro_Aagaard_bash.sh


# End of file 
