# -*- Makefile -*-
#
# ----------------------------------------------------------------------
#
# Brad T. Aagaard, U.S. Geological Survey
# Charles A. Williams, GNS Science
# Matthew G. Knepley, University at Buffalo
#
# This code was developed as part of the Computational Infrastructure
# for Geodynamics (http://geodynamics.org).
#
# Copyright (c) 2010-2021 University of California, Davis
#
# See LICENSE.md for license information.
#
# ----------------------------------------------------------------------
#

EXTRA_DIST = \
	README \
	Cluster_CIT-garuda.txt \
	Cluster_CIT-garuda/PyLith.README \
	Cluster_CIT-garuda/sample.bashrc \
	Cluster_CIT-garuda/sample.bash.tools \
	Cluster_CIT-garuda/sample.pylithapp.cfg \
	Cluster_CIT-pangu.txt \
	Cluster_CIT-pangu/PyLith.README \
	Cluster_CIT-pangu/sample.bashrc \
	Cluster_CIT-pangu/sample.bash.tools \
	Cluster_CIT-pangu/sample.pylithapp.cfg


# End of file 
