# -*- Makefile -*-
#
# ----------------------------------------------------------------------
#
#                           Brad T. Aagaard
#                        U.S. Geological Survey
#
# <LicenseText>
#
# ----------------------------------------------------------------------
#

EXTRA_DIST = \
	pylith1.0/pylith_overview.pdf \
	pylith1.2/pylith_overview.pdf \
	pylith1.3/pylith_overview.pdf \
	pylith1.4/pylith_overview.pdf \
	pylith1.5/pylith_overview.pdf


# End of file 
