# -*- Makefile -*-
#
# ----------------------------------------------------------------------
#
# Brad T. Aagaard, U.S. Geological Survey
# Charles A. Williams, GNS Science
# Matthew G. Knepley, University of Chicago
#
# This code was developed as part of the Computational Infrastructure
# for Geodynamics (http://geodynamics.org).
#
# Copyright (c) 2010 University of California, Davis
#
# See COPYING for license information.
#
# ----------------------------------------------------------------------
#

EXTRA_DIST = \
	pylith1.0/pylith_overview.pdf \
	pylith1.2/pylith_overview.pdf \
	pylith1.3/pylith_overview.pdf \
	pylith1.4/pylith_overview.pdf \
	pylith1.5/pylith_overview.pdf \
	pylith1.6/pylith_overview.pdf \
	pylith1.7/pylith_overview.pdf


# End of file 
