# -*- Makefile -*-
#
# ----------------------------------------------------------------------
#
# Brad T. Aagaard, U.S. Geological Survey
# Charles A. Williams, GNS Science
# Matthew G. Knepley, University at Buffalo
#
# This code was developed as part of the Computational Infrastructure
# for Geodynamics (http://geodynamics.org).
#
# Copyright (c) 2010-2021 University of California, Davis
#
# See LICENSE.md for license information.
#
# ----------------------------------------------------------------------
#

EXTRA_DIST = \
	announce_v1.0.1.txt \
	announce_v1.0.2.txt \
	announce_v1.1.0.txt \
	announce_v1.2.0.txt \
	announce_v1.3.0.txt \
	announce_v1.3.1.txt \
	announce_v1.4.0.txt \
	announce_v1.4.2.txt \
	announce_v1.5.0.txt \
	announce_v1.5.1.txt \
	announce_v1.5.2.txt \
	announce_v1.6.0.txt \
	announce_v1.6.1.txt \
	announce_v1.6.2.txt \
	announce_v1.6.3.txt \
	announce_v1.7.0.txt \
	announce_v1.7.1.txt \
	announce_v1.8.0.txt \
	announce_v1.9.0.txt \
	announce_v2.0.0.txt \
	announce_v2.0.1.txt \
	announce_v2.0.3.txt \
	announce_v2.1.0.txt \
	announce_v2.1.2.txt \
	announce_v2.1.3.txt \
	announce_v2.1.4.txt \
	announce_v2.2.0.txt \
	announce_v2.2.1.txt


# End of file 
