# -*- Makefile -*-
#
# ----------------------------------------------------------------------
#
#                           Brad T. Aagaard
#                        U.S. Geological Survey
#
# <LicenseText>
#
# ----------------------------------------------------------------------
#

dist_noinst_DATA =

default: userguide.pdf

userguide.pdf:
	lyx -e pdflatex userguide.lyx

# End of file 
